--- a/01_Servicios/Vagrantfile
+++ b/01_Servicios/Vagrantfile
@@ -1,6 +1,6 @@
 Vagrant.configure("2") do |config|
     # --- Box base ---
-    config.vm.box = "alvistack/ubuntu-24.04"
+    config.vm.box = "ubuntu_server_25_10"
 
     # --- Red ---
     config.vm.network "private_network", ip: "192.168.56.2"
@@ -11,6 +11,7 @@ Vagrant.configure("2") do |config|
     
     # --- Hardware ---
     config.vm.provider "virtualbox" do |vb|
+        vb.name = "ubuntu_server_vagrant_01"
         vb.memory = "2048"
         vb.cpus = 2
     end
