--- a/01_Servicios/Vagrantfile
+++ b/01_Servicios/Vagrantfile
@@ -15,6 +15,9 @@ Vagrant.configure("2") do |config|
         vb.memory = "2048"
         vb.cpus = 2
     end
+
+    # --- Desactivar inserción de nueva llave ---
+    config.ssh.insert_key = false
     
     # --- Provisión ---
     config.vm.provision "shell", run: "once" do |s|
