--- a/01_Servicios/Vagrantfile
+++ b/01_Servicios/Vagrantfile
@@ -1,6 +1,9 @@
+NEW_USERNAME = "victorlt"
+NEW_PASSWORD = "victorlt"
+
 Vagrant.configure("2") do |config|
     # --- Box base ---
-    config.vm.box = "ubuntu_server_25_10"
+    config.vm.box = "ubuntu_server_25_10_configurada"
 
     # --- Red ---
     config.vm.network "private_network", ip: "192.168.56.2"
@@ -16,19 +19,50 @@ Vagrant.configure("2") do |config|
         vb.cpus = 2
     end
 
-    # --- Desactivar inserción de nueva llave ---
-    config.ssh.insert_key = false
-    
-    # --- Provisión ---
+    # --- Usuario ---
+    #config.ssh.username = "vagrant"
+    #config.ssh.password = "vagrant"
+
+    # --- Deshabilitar la inserción de clave y apuntar a tu privada ---
+    #config.ssh.insert_key = false
+    #config.ssh.private_key_path = [File.expand_path("~/.ssh/id_rsa")]
+
+    # --- Provisiones ---
+    config.vm.provision "shell",
+        path: "create_user.sh",
+        args: [NEW_USERNAME, NEW_PASSWORD]
+
+    # Clave pública en la VM (file + shell):
+    #config.vm.provision "file",
+        #source: File.expand_path("~/.ssh/id_rsa.pub"),
+        #destination: "/tmp/id_rsa.pub"
+
+    #config.vm.provision "shell", inline: <<-SHELL
+    #    mkdir -p /home/vagrant/.ssh
+    #    chmod 700 /home/vagrant/.ssh
+    #    cat /tmp/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
+    #    chmod 600 /home/vagrant/.ssh/authorized_keys
+    #    chown -R vagrant:vagrant /home/vagrant/.ssh
+    #
+    #    mkdir -p /home/#{NEW_USERNAME}/.ssh
+    #    chmod 700 /home/#{NEW_USERNAME}/.ssh
+    #    cat /tmp/id_rsa.pub >> /home/#{NEW_USERNAME}/.ssh/authorized_keys
+    #    chmod 600 /home/#{NEW_USERNAME}/.ssh/authorized_keys
+    #    chown -R #{NEW_USERNAME}:#{NEW_USERNAME} /home/#{NEW_USERNAME}/.ssh
+    #SHELL
+
+    # Solo en la primera ejecución
     config.vm.provision "shell", run: "once" do |s|
         s.inline = <<-SHELL
-            apt-get update -y
-            apt-get install -y python3 python3-pip
+            sudo add-apt-repository universe
+            sudo apt update -y
+            sudo apt install -y python3.13 python3.13-venv python3-pip
 
             # Crear el entorno virtual fuera del directorio compartido
-            python3 -m venv /opt/venv
-            /opt/venv/bin/pip install --upgrade pip
-            /opt/venv/bin/pip install fastapi uvicorn
+            sudo python3.13 -m venv /opt/venv --without-pip
+            sudo /opt/venv/bin/python3 -m ensurepip --upgrade
+            sudo /opt/venv/bin/python3 -m pip install --upgrade pip
+            sudo /opt/venv/bin/python3 -m pip install fastapi uvicorn
         SHELL
     end
 end
