--- a/01_Servicios/Vagrantfile
+++ b/01_Servicios/Vagrantfile
@@ -24,7 +24,7 @@ Vagrant.configure("2") do |config|
     #config.ssh.password = "vagrant"
 
     # --- Deshabilitar la inserción de clave y apuntar a tu privada ---
-    #config.ssh.insert_key = false
+    #config.ssh.insert_key = true
     #config.ssh.private_key_path = [File.expand_path("~/.ssh/id_rsa")]
 
     # --- Provisiones ---
@@ -33,23 +33,23 @@ Vagrant.configure("2") do |config|
         args: [NEW_USERNAME, NEW_PASSWORD]
 
     # Clave pública en la VM (file + shell):
-    #config.vm.provision "file",
-        #source: File.expand_path("~/.ssh/id_rsa.pub"),
-        #destination: "/tmp/id_rsa.pub"
+    config.vm.provision "file",
+       source: File.expand_path("~/.ssh/id_rsa.pub"),
+       destination: "/tmp/id_rsa.pub"
 
-    #config.vm.provision "shell", inline: <<-SHELL
-    #    mkdir -p /home/vagrant/.ssh
-    #    chmod 700 /home/vagrant/.ssh
-    #    cat /tmp/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
-    #    chmod 600 /home/vagrant/.ssh/authorized_keys
-    #    chown -R vagrant:vagrant /home/vagrant/.ssh
-    #
-    #    mkdir -p /home/#{NEW_USERNAME}/.ssh
-    #    chmod 700 /home/#{NEW_USERNAME}/.ssh
-    #    cat /tmp/id_rsa.pub >> /home/#{NEW_USERNAME}/.ssh/authorized_keys
-    #    chmod 600 /home/#{NEW_USERNAME}/.ssh/authorized_keys
-    #    chown -R #{NEW_USERNAME}:#{NEW_USERNAME} /home/#{NEW_USERNAME}/.ssh
-    #SHELL
+    config.vm.provision "shell", inline: <<-SHELL
+        #mkdir -p /home/vagrant/.ssh
+        #chmod 700 /home/vagrant/.ssh
+        #cat /tmp/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
+        #chmod 600 /home/vagrant/.ssh/authorized_keys
+        #chown -R vagrant:vagrant /home/vagrant/.ssh
+    
+        mkdir -p /home/#{NEW_USERNAME}/.ssh
+        chmod 700 /home/#{NEW_USERNAME}/.ssh
+        cat /tmp/id_rsa.pub >> /home/#{NEW_USERNAME}/.ssh/authorized_keys
+        chmod 600 /home/#{NEW_USERNAME}/.ssh/authorized_keys
+        chown -R #{NEW_USERNAME}:#{NEW_USERNAME} /home/#{NEW_USERNAME}/.ssh
+    SHELL
 
     # Solo en la primera ejecución
     config.vm.provision "shell", run: "once" do |s|
